2007-05-10  Sanel <karijes@users.sourceforge.net>

	* Removed some obsole entries from TODO
	* Added tinyxml classes
	* MimeType class with xdgmime backend; needs more work
	* Finished docs for tinyxml (PITA!)
	* Added icon_name() to MimeType
	* Added tests for MimeType

2007-05-09  Sanel <karijes@users.sourceforge.net>

	* Changed find() functions in String to const

2007-05-08  Sanel <karijes@users.sourceforge.net>

	* Work on Time class
	* String allocation checks
	* user_xxx_dir() will now return correct XDG paths; returning
	paths with '/ede' appended is not conforming

2007-05-07  Sanel <karijes@users.sourceforge.net>

	* dir_separator() will return const char* (why the hell it 
	was returning String?)
	* removed entry (dir_separator() == "/") in test/directory.cpp
	* added build_filename() and build_dirname() functions with tests
	* Added gmtime_r() checks if datetime.m4
	* Date can be set via local date or UTC
	* Fixed NULL defines :)

2007-05-06  Sanel <karijes@users.sourceforge.net>

	* Added Date class with tests
	* Corrected \brief tag for doxygen in rest of the code
	* Cleaned obsolete modules for doxygen
	* index.dox s/prepare/autohen.sh
	* Fixed flawed docs for stringtok; uh!
	* Assertion will dump stack if apropriate functions are available
	* MakeTest will by default link with '-rdynamic' flag, so stack dump
	can be corectly shown

2007-05-05  Sanel <karijes@users.sourceforge.net>

	* Config can accept true/false strings as replacement for 1/0
	* Config section lookup is now cached, speeding things considerably

2007-05-04  Sanel <karijes@users.sourceforge.net>

	* stringtok can work witout delimiter so delimiter
	is removed from default entry in system_config_dirs()
	* More tests for system_xxx_dirs()
	* Added Run.{h,cpp}

2007-05-04  Sanel <karijes@users.sourceforge.net>

	* Added color_fltk_to_rgb and color_fltk_to_html
	* More tests for color functions and ones for above

2007-05-02  Sanel <karijes@users.sourceforge.net>
