@@ -6,7 +6,6 @@ TODO list:
  * in Config, don't allow [] sections
  * Config::remove_entry() finish
  * what should set_textdomain_dir() and set_textdomain() return when NLS is disabled ?
- * organize documentation into modules
  * Sound should have explicit option for setting various drivers
  * non-blocking Sound
  * documentation install strangely depends on xxx/doc/edelib-xxx/html directory; how ?
@@ -15,4 +14,4 @@ TODO list:
  * IconTheme will probably fail if Directories contains spaces between ',' delimiters; trim this
  * Date can accept set(0,1,0); leave this or... (possible bugs ?)
  * Finish DateTime
- * Finish MimeType
+ * xdgmime calls too much xdg_mime_init()/xdg_mime_shutdown(); move these in MimeType class
