@@ -21,9 +21,13 @@
 
 #define MIME_DIR "/usr/share/mime"
 
+#define MIME_LOADED    1
+#define COMMENT_LOADED 2
+#define ICON_LOADED    4
+
 EDELIB_NAMESPACE {
 
-MimeType::MimeType()
+MimeType::MimeType() : status(0)
 {
 }
 
@@ -35,25 +39,43 @@ MimeType::~MimeType()
 bool MimeType::set(const char* filename)
 {
 	EASSERT(filename != NULL);
+	/*
+	 * Call on the same file again check.
+	 *
+	 * FIXME: some stamp check would be nice here so if file 
+	 * with the same name change content, can be inspected.
+	 */
+	if(mtype == filename)
+		return true;
 
-	mcmt.clear(); mtype.clear();
+	mcmt.clear(); mtype.clear(); micon.clear();
 
 	const char* res = xdg_mime_get_mime_type_for_file(filename, NULL);
-	if(!res)
+	if(!res) {
+		status = 0;
 		return false;
+	}
 
 	mtype.assign(res);
-
+	status = MIME_LOADED;
 	return true;
 }
 
 String MimeType::type(void)
 {
+	// we already cleared value
 	return mtype;
 }
 
 String MimeType::comment(void)
 {
+	// calling without mime loaded do nothing
+	if(!(status & MIME_LOADED))
+		return "";
+
+	if(status & COMMENT_LOADED)
+		return mcmt;
+
 	String ttype = mtype;
 	ttype += ".xml";
 	String path = build_filename("/", MIME_DIR, ttype.c_str());
@@ -71,8 +93,6 @@ String MimeType::comment(void)
 	}
 
 	TiXmlNode* el = doc.FirstChild("mime-type");
-
-	//printf("--> %s\n", el->ToElement()->Attribute("type"));
 
 	/*
 	 * First element which does not have "xml:lang" attribute
@@ -95,13 +115,17 @@ String MimeType::comment(void)
 		}
 	}
 
+	status |= COMMENT_LOADED;
 	return mcmt;
 }
 
-String MimeType::icon_name(void)
+String MimeType::icon_name(void) 
 {
-	if(mtype.empty())
+	if(!(status & MIME_LOADED) && mtype.empty())
 		return "";
+
+	if(status & ICON_LOADED)
+		return micon;
 
 	vector<String> vs;
 	stringtok(vs, mtype, "/");
@@ -109,17 +133,18 @@ String MimeType::icon_name(void)
 	if(vs.size() < 2)
 		return "";
 
-	String ret;
-	ret.reserve(50);
+	micon.clear();
+	micon.reserve(5);
 	unsigned int sz = vs.size();
 	for(unsigned int i = 0; i < sz-1; i++) {
-		ret += vs[i];
-		ret += '-';
+		micon += vs[i];
+		micon += '-';
 	}
 
-	ret += vs[sz-1];
+	micon += vs[sz-1];
 
-	return ret;
+	status |= ICON_LOADED;
+	return micon;
 }
 
 }
