@@ -1,3 +1,9 @@
+2007-05-11  Sanel <karijes@users.sourceforge.net>
+
+	* MimeType functions will do nothing if mime is not correctly
+	loaded. Updated tests.
+	* Another TODO entry
+
 2007-05-10  Sanel <karijes@users.sourceforge.net>
 
 	* Removed some obsole entries from TODO
